# xgbe

./: .gitignore  CMakeLists.txt
data/: boot.gbc.asm
docs/gathered/: GameBoy Opcodes Summary.html  GameBoy Programming Info.html  Gameboy (LR35902) OPCODES.html  Specifications.html  (+4 more)
emulation/: Arguments.cpp  Arguments.h  Bus.cpp  Bus.h  CMakeLists.txt  Cartridge.cpp  Cartridge.h  Clock.cpp  Clock.h  Cpu.cpp  Cpu.h  Emulation.cpp  Emulation.h  GameBoy.cpp  GameBoy.h  GameBoyLoader.cpp  GameBoyLoader.h  KeyCommand.h  Log.h  Result.h  TimeController.cpp  TimeController.h
emulation/Cartridge/: RealTimeClock.cpp  RealTimeClock.h
emulation/Cpu/: CbInstructionTable.cpp  CbInstructionTable.h  CpuRegisters.cpp  CpuRegisters.h  Instruction.cpp  Instruction.h  InstructionTable.cpp  InstructionTable.h  Instructions.cpp  Instructions.h  InterruptController.cpp  InterruptController.h  InterruptRegisters.cpp  InterruptRegisters.h
emulation/Cpu/Instructions/: AFRegister.h  Addition.h  Advance.h  Binary.h  Bit.h  CbInstruction.cpp  CbInstruction.h  Flags.h  General.h  Jumps.h  Move.h  Operands.h  Rotations.h  Shifts.h  Stack.h  Substraction.h
emulation/Memory/: BiosRom.h  CartridgeRam.h  CartridgeRom.h  HighRam.h  Index.h  MBC1.cpp  MBC2.cpp  MBC3.cpp  MBC3_RTC.cpp  MBC5.cpp  MBCNone.cpp  Memory.h  MemoryBankController.cpp  MemoryBankController.h  WorkRam.h
emulation/Operations/: Bus.h  Flag.h  Interrupt.h  Pc.h  Register.h  Sp.h
xgbe/: Application.cpp  Application.h  CMakeLists.txt  KeyHandleCommand.h  KeyboardHandler.cpp  KeyboardHandler.h  Window.cpp  Window.h  main.cpp
(+2 files in other folders)
